--- a/Frost ToolBox/MainWindow.xaml
+++ b/Frost ToolBox/MainWindow.xaml
@@ -7,22 +7,26 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    x:Name="mainWindow"
-    >   
+    >
 
-    <NavigationView x:Name="toolNv" PaneDisplayMode="Left" SelectionChanged="toolNv_SelectionChanged" IsBackButtonVisible="Collapsed" PaneTitle="工具">
-        <NavigationView.MenuItems>
-            <NavigationViewItem Icon="Home" Content="主页" Tag="HomePage"/>
-            <NavigationViewItemHeader Content="管理"/>
-            <NavigationViewItem Icon="AllApps" Content="标签管理" Tag="TagManagerPage"/>
-            <NavigationViewItemHeader Content="编辑"/>
-            <NavigationViewItem Icon="FullScreen" Content="图片缩放" Tag="PicScalePage"/>
-        </NavigationView.MenuItems>
 
-        <NavigationView.AutoSuggestBox>
-            <AutoSuggestBox QueryIcon="Find" AutomationProperties.Name="Search"/>
-        </NavigationView.AutoSuggestBox>
-
-        <Frame x:Name="contentFrame"/>
-    </NavigationView>
+    <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="ms-appx:///Assets/89589460_p0.png" Stretch="UniformToFill"/>
+            <!--<SolidColorBrush Color="Aqua"/>-->
+        </Grid.Background>
+        <NavigationView x:Name="toolNv" PaneDisplayMode="Left" SelectionChanged="toolNv_SelectionChanged" IsBackButtonVisible="Collapsed" PaneTitle="工具" OpenPaneLength="280">
+            <NavigationView.MenuItems>
+                <NavigationViewItem Icon="Home" Content="主页" Tag="HomePage" IsSelected="True"/>
+                <NavigationViewItemHeader Content="管理"/>
+                <NavigationViewItem Icon="AllApps" Content="标签管理" Tag="TagManagerPage"/>
+                <NavigationViewItemHeader Content="编辑"/>
+                <NavigationViewItem Icon="FullScreen" Content="图片缩放" Tag="PicScalePage"/>
+            </NavigationView.MenuItems>
+            <NavigationView.AutoSuggestBox>
+                <AutoSuggestBox QueryIcon="Find" AutomationProperties.Name="Search"/>
+            </NavigationView.AutoSuggestBox>
+            <Frame x:Name="contentFrame"></Frame>
+        </NavigationView>
+    </Grid>
 </Window>
