--- a/Frost ToolBox/Pages/PicScalePage.xaml
+++ b/Frost ToolBox/Pages/PicScalePage.xaml
@@ -6,35 +6,40 @@
     xmlns:local="using:Frost_ToolBox.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d">
 
+    <Page.Background>
+        <AcrylicBrush TintColor="White" TintOpacity="0.0" FallbackColor="White"/>
+    </Page.Background>
+    
+    
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0">
-            <TextBlock Text="图片缩放" Margin="30,30,0,0" FontSize="32" TextTrimming="CharacterEllipsis"/>
-            <TextBlock Text="将16*16的图片批量放大为128*128的图片，从而便于mcmod的编辑" Margin="30,30,0,0" TextTrimming="CharacterEllipsis"/>
-            <TextBlock Text="选择或者拖动文件夹或文件到此处开始转换" Margin="30,10,0,0" TextTrimming="CharacterEllipsis"/>
-        </StackPanel>
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <Button Content="选择" Margin="30,10,10,0"/>
-            <Button Content="转换" Margin="30,10,10,0"/>
-        </StackPanel>
-        <Grid Grid.Row="2" Margin="30,10,30,30">
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" BorderBrush="Silver" BorderThickness="1" CornerRadius="5">
-                <StackPanel Orientation="Horizontal" x:Name="picPreview" Margin="30"/>
-            </Border>
-            <Border Grid.Row="1" BorderBrush="Silver" BorderThickness="1" CornerRadius="5" Margin="0,10,0,0">
-                <TextBlock Margin="10" x:Name="log"/>
-            </Border>
+            <StackPanel Grid.Row="0">
+                <TextBlock Text="图片缩放" Margin="30,30,0,0" FontSize="32" TextTrimming="CharacterEllipsis"/>
+                <TextBlock Text="将16*16的图片批量放大为128*128的图片，从而便于mcmod的编辑" Margin="30,30,0,0" TextTrimming="CharacterEllipsis"/>
+                <TextBlock Text="选择或者拖动文件夹或文件到此处开始转换" Margin="30,10,0,0" TextTrimming="CharacterEllipsis"/>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Orientation="Horizontal">
+                <Button Content="选择" Margin="30,10,10,0"/>
+                <Button Content="转换" Margin="30,10,10,0" Click="Button_Click"/>
+                <TextBlock x:Name="log" Margin="30,10,10,0" VerticalAlignment="Center"/>
+            </StackPanel>
+            <Grid Grid.Row="2" Margin="30,10,30,30" AllowDrop="True" Drop="qwq_Drop" DragOver="picPreview_DragOver" Background="Transparent">
+                <Border Grid.Row="0" BorderThickness="1" CornerRadius="10" x:Name="qwq">
+                    <GridView x:Name="picPreview" Margin="30" HorizontalAlignment="Center" VerticalAlignment="Center" CanBeScrollAnchor="True" Background="Transparent">
+                        <TextBlock x:Name="tipText" Text="拖动文件到此处" Visibility="Collapsed" Foreground="DarkGray"/>
+                    </GridView>
+                    <Border.Background>
+                        <SolidColorBrush Color="White"/>
+                    </Border.Background>
+                </Border>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
