--- a/Frost ToolBox/Pages/TagManagerPage.xaml
+++ b/Frost ToolBox/Pages/TagManagerPage.xaml
@@ -6,8 +6,11 @@
     xmlns:local="using:Frost_ToolBox.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d">
+
+    <Page.Background>
+    <AcrylicBrush TintColor="White" TintOpacity="0.0" FallbackColor="White"/>
+    </Page.Background>
 
     <Grid>
         <Grid.RowDefinitions>
