--- a/Frost ToolBox/App.xaml
+++ b/Frost ToolBox/App.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Application
-    x:Class="Frost_ToolBox.App"
+    x:Class="FrostLeaf_ToolBox.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Frost_ToolBox">
+    xmlns:local="using:FrostLeaf_ToolBox">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
