--- a/Frost ToolBox/MainWindow.xaml
+++ b/Frost ToolBox/MainWindow.xaml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Window
-    x:Class="Frost_ToolBox.MainWindow"
+    x:Class="FrostLeaf_ToolBox.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Frost_ToolBox"
+    xmlns:local="using:FrostLeaf_ToolBox"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     >
-
 
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="ms-appx:///Assets/89589460_p0.png" Stretch="UniformToFill"/>
             <!--<SolidColorBrush Color="Aqua"/>-->
         </Grid.Background>
-        <NavigationView x:Name="toolNv" PaneDisplayMode="Left" SelectionChanged="toolNv_SelectionChanged" IsBackButtonVisible="Collapsed" PaneTitle="工具" OpenPaneLength="280">
+        <NavigationView x:Name="toolNv" PaneDisplayMode="Left" SelectionChanged="toolNv_SelectionChanged" IsBackButtonVisible="Collapsed" PaneTitle="霜叶工具箱" OpenPaneLength="280">
             <NavigationView.MenuItems>
                 <NavigationViewItem Icon="Home" Content="主页" Tag="HomePage" IsSelected="True"/>
                 <NavigationViewItemHeader Content="管理"/>
@@ -24,7 +23,7 @@
                 <NavigationViewItem Icon="FullScreen" Content="图片缩放" Tag="PicScalePage"/>
             </NavigationView.MenuItems>
             <NavigationView.AutoSuggestBox>
-                <AutoSuggestBox QueryIcon="Find" AutomationProperties.Name="Search"/>
+                <AutoSuggestBox TextChanged="AutoSuggestBox_TextChanged" QuerySubmitted="AutoSuggestBox_QuerySubmitted" AutomationProperties.Name="Search" QueryIcon="Find"/>
             </NavigationView.AutoSuggestBox>
             <Frame x:Name="contentFrame"></Frame>
         </NavigationView>
