--- a/Frost ToolBox/Pages/Dialog/ResetSettings.xaml
+++ b/Frost ToolBox/Pages/Dialog/ResetSettings.xaml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="FrostLeaf_ToolBox.Pages.HomePage"
+    x:Class="FrostLeaf_ToolBox.Pages.Dialog.ResetSettings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FrostLeaf_ToolBox.Pages"
+    xmlns:local="using:FrostLeaf_ToolBox.Pages.Dialog"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="Transparent">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-
-    </Grid>
+    <StackPanel>
+        <TextBlock Text="你的设置将会被重置，并且不可恢复"/>
+    </StackPanel>
+    
 </Page>
