--- a/Frost ToolBox/Pages/TagManagerPage.xaml
+++ b/Frost ToolBox/Pages/TagManagerPage.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="Frost_ToolBox.Pages.TagManagerPage"
+    x:Class="FrostLeaf_ToolBox.Pages.TagManagerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Frost_ToolBox.Pages"
+    xmlns:local="using:FrostLeaf_ToolBox.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
