--- a/Frost ToolBox/Pages/TagManagerPage.xaml
+++ b/Frost ToolBox/Pages/TagManagerPage.xaml
@@ -21,11 +21,44 @@
         <StackPanel Grid.Row="0">
             <TextBlock Text="标签管理" Margin="30,30,0,0" FontSize="32" TextTrimming="CharacterEllipsis"/>
             <TextBlock Text="读取数据包中使用过的所有标签，并整合到一个文件中便于识别和管理" Margin="30,30,0,0" TextTrimming="CharacterEllipsis"/>
-            <TextBlock Text="选择或者拖动文件夹或文件到此处开始读取" Margin="30,10,0,0" TextTrimming="CharacterEllipsis"/>
+            <TextBlock Text="选择文件夹或文件到此处开始读取" Margin="30,10,0,0" TextTrimming="CharacterEllipsis"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <Button Content="选择" Margin="30,10,10,0"/>
-            <Button Content="读取" Margin="30,10,10,0"/>
+            <DropDownButton Content="选择" Margin="30,10,10,0">
+                <DropDownButton.Flyout>
+                    <MenuFlyout Placement="BottomEdgeAlignedLeft">
+                        <MenuFlyoutItem Text="从项目中读取" IsEnabled="False" Click="readFromProject_Click" x:Name="readFromProject"/>
+                        <MenuFlyoutItem Text="从文件/文件夹中读取" Click="MenuFlyoutItem_Click"/>
+                    </MenuFlyout>
+                </DropDownButton.Flyout>
+                <DropDownButton.Resources>
+                    <TeachingTip x:Name="ReadingPicTip" Title="正在读取文件喵！" PreferredPlacement="BottomRight" PlacementMargin="20" IsLightDismissEnabled="True"/>
+                </DropDownButton.Resources>
+            </DropDownButton>
+            <Button x:Name="readButton" Content="读取" Margin="30,10,10,0" Click="Button_Click"/>
+            <TextBlock x:Name="logText" Margin="30,10,10,0" VerticalAlignment="Center"/>
         </StackPanel>
+        <Grid Grid.Row="2" Margin="30,10,30,30" Background="Transparent">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" BorderThickness="1" CornerRadius="10" x:Name="qwq">
+                <ScrollViewer x:Name="scrollViewer">
+                    <StackPanel x:Name="tagPreview" Margin="30" HorizontalAlignment="Stretch" VerticalAlignment="Center" CanBeScrollAnchor="True" Background="Transparent">
+                        <TextBlock x:Name="tipText" Text="还没开始分析呢~" Visibility="Visible" Foreground="DarkGray" TextWrapping="Wrap"/>
+                        <ProgressBar x:Name="readProgressBar" IsIndeterminate="True" Visibility="Collapsed"/>
+                        <TreeView x:Name="result">
+                            <TreeView.RootNodes>
+                            </TreeView.RootNodes>
+                        </TreeView>
+                    </StackPanel>
+                </ScrollViewer>
+                <Border.Background>
+                    <SolidColorBrush Color="White"/>
+                </Border.Background>
+            </Border>
+            <Button Grid.Row="1" x:Name="outputButton" Content="导出" Margin="30,10,10,0" Click="outputButton_Click" HorizontalAlignment="Right"/>
+        </Grid>
     </Grid>
 </Page>
