--- a/Frost ToolBox/Pages/ResourcePackUnionPage.xaml
+++ b/Frost ToolBox/Pages/ResourcePackUnionPage.xaml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="FrostLeaf_ToolBox.Pages.PicScalePage"
+    x:Class="FrostLeaf_ToolBox.Pages.Game.ResourcePackUnionPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FrostLeaf_ToolBox.Pages"
+    xmlns:local="using:FrostLeaf_ToolBox.Pages.Game"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    >
+
 
     <Page.Background>
         <AcrylicBrush TintColor="White" TintOpacity="0.0" FallbackColor="White"/>
     </Page.Background>
-
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -20,28 +20,27 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
-            <TextBlock Text="图片缩放" Margin="30,50,0,0" FontSize="32" TextTrimming="CharacterEllipsis"/>
-            <TextBlock Text="将16*16的图片批量放大为128*128的图片，从而便于mcmod的编辑" Margin="30,30,0,0" TextTrimming="CharacterEllipsis"/>
-            <TextBlock Text="选择或者拖动文件夹或文件到此处开始转换" Margin="30,10,0,0" TextTrimming="CharacterEllipsis"/>
+            <TextBlock Text="资源包合并" Margin="30,50,0,0" FontSize="32" TextTrimming="CharacterEllipsis"/>
+            <TextBlock Text="把不同的资源包整合在一起，并自动解决CustomModelData的问题" Margin="30,30,0,0" TextTrimming="CharacterEllipsis"/>
+            <TextBlock Text="选择或拖动资源包文件夹到此处" Margin="30,10,0,0" TextTrimming="CharacterEllipsis"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Horizontal">
             <DropDownButton Content="选择" Margin="30,10,10,0">
                 <DropDownButton.Flyout>
                     <MenuFlyout Placement="BottomEdgeAlignedLeft">
-                        <MenuFlyoutItem Text="从项目中读取" IsEnabled="False" Click="MenuFlyoutItem_Click" x:Name="readFromProject"/>
-                        <MenuFlyoutItem Text="从文件/文件夹中读取" Click="MenuFlyoutItem_Click_1"/>
+                        <MenuFlyoutItem Text="从文件/文件夹中读取" Click="MenuFlyoutItem_Click"/>
                     </MenuFlyout>
                 </DropDownButton.Flyout>
                 <DropDownButton.Resources>
                     <TeachingTip x:Name="ReadingPicTip" Title="正在读取文件喵！" PreferredPlacement="BottomRight" PlacementMargin="20" IsLightDismissEnabled="True"/>
                 </DropDownButton.Resources>
             </DropDownButton>
-            <Button Content="转换" Margin="30,10,10,0" Click="Button_Click"/>
+            <Button x:Name="unionButton" Content="合并" Margin="30,10,10,0" Click="Button_Click"/>
             <TextBlock x:Name="log" Margin="30,10,10,0" VerticalAlignment="Center"/>
         </StackPanel>
-        <Grid Grid.Row="2" Margin="30,10,30,30" AllowDrop="True" Drop="qwq_Drop" DragOver="picPreview_DragOver" Background="Transparent">
+        <Grid Grid.Row="2" Margin="30,10,30,30" AllowDrop="True" Drop="Grid_Drop"  DragOver="Grid_DragOver"  Background="Transparent">
             <Border Grid.Row="0" BorderThickness="1" CornerRadius="10" x:Name="qwq">
-                <GridView x:Name="picPreview" Margin="30" HorizontalAlignment="Center" VerticalAlignment="Center" CanBeScrollAnchor="True" Background="Transparent" SelectionMode="None" IsItemClickEnabled="False">
+                <GridView x:Name="folderPreView" Margin="30" HorizontalAlignment="Center" VerticalAlignment="Center" CanBeScrollAnchor="True" Background="Transparent" SelectionMode="None" IsItemClickEnabled="False">
                     <TextBlock x:Name="tipText" Text="拖动文件到此处" Visibility="Collapsed" Foreground="DarkGray"/>
                 </GridView>
                 <Border.Background>
